# tdt4265_computer_vision

./: README.md
assignment01/: notebook_assignment01.ipynb
assignment01/figures/: task21a.eps
assignment02/: functions.py  multi_layer_perceptron.py  notebook_assignment02.ipynb
assignment03/: networks.py  notebook_assignment03.ipynb  trainer.py
assignment04/: task2.py  task2_tests.py
assignment04/.ipynb_checkpoints/: notebook04-checkpoint.ipynb
assignment04/yolo/.ipynb_checkpoints/: task4-checkpoint.ipynb
assignments/assignment01/: TDT4265 - Assignment 1 - Martin Kvisvik Larsen.ipynb  data_preprocess.py  slp.py
project/: CMakeLists.txt  Makefile
project/klt_tracker/: CMakeLists.txt  requirements.txt
project/klt_tracker/src/: main.cpp
project/klt_tracker/src/hello/: hello.cpp  hello.hpp
project/klt_tracker/src/loader/: loader.cpp
